# project1_priezzhikh_timofey_M25-555

./: .gitignore  README.md  makefile  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
