[tool.poetry]
name = "project1-priezzhikh-timofey-m25-555"
version = "0.1.0"
description = ""
authors = ["Timofey Priezzhikh <t.priezzhikh@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"